2004-01-15  Glenn Maynard <g_ld@zewt.org>

	* buffer.cc: include errno.h early.

2004-01-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: set entity size at end of transfer too, in case it was
	  not known at the beginning.
	* SFtp.cc: don't use non-portable S_IAMB macro.
	* buffer.cc, buffer.h: fixed translation by adding bool from_untranslated;
	  new class IOBufferStacked.
	* ftpclass.cc: don't disconnect on some temporary errors, just re-send
	  the command after delay; (IOBufferTelnet) new class; use it;
	  (telnet_layer_send) new member; add site utime support; better status
	  for FEAT negotiation; add overloaded MDTM support.
	* resource.cc: (ftp:use-site-utime, ftp:use-mdtm-overloaded) new settings.

2004-01-14  Alexander V. Lukyanov <lav@yars.free.net>

	* ProcWait.cc: don't call NonFatalError, as it causes ProcWait to spin.
	* commands.cc: fix compilation with IRIX compiler.

2003-12-22  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Http.h: add Buffered method; allow storing in https mode;
	  use NO_DATE and NO_SIZE constants.
	* NetAccess.cc, NetAccess.h: move SocketBuffered here from ftpclass.cc.
	* SFtp.cc: more precise Buffered method.
	* buffer.cc: add Buffered method.
	* buffer_ssl.cc: add ErrorFatal method.
	* ftpclass.cc, ftpclass.h: read/write through buffer;
	  use NetAccess::SocketBuffered; follow RFC2640; FEAT, LANG, UTF8
	  support;
	* resource.cc: new settings ftp:use-feat, ftp:use-lang.

2003-12-19  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc: (StoreStatus) return OK when not opened for storing.
	* FileCopy.cc: skip storing past eof only if there is such file already;
	  do better line buffering at the cost of performance.

2003-12-17  Alexander V. Lukyanov <lav@yars.free.net>

	* module.cc: rename module_into to lftp_module_info to avoid
	  name conflict.

2003-12-17  albert chin <china@thewrittenword.com>

	* Makefile.am: remove LOCALE_DIR, use datadir/locale instead.